// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useStyles attaches new styles when a new style collector is supplied 1`] = `
<head>
  <style
    data-trousers=".foo__38890833250 .foo--4911895800"
    type="text/css"
  >
    
    .foo__38890833250{background-color:blue;}

    .foo--4911895800{background-color:red;}

  </style>
</head>
`;

exports[`useStyles attaches new styles when a new style collector is supplied 2`] = `
<head>
  <style
    data-trousers=".foo__38890833250 .foo--4911895800 .foo__30169568310 .foo--38262462060"
    type="text/css"
  >
    
    .foo__38890833250{background-color:blue;}

    .foo--4911895800{background-color:red;}

    .foo__30169568310{background-color:purple;}

    .foo--38262462060{background-color:green;}

  </style>
</head>
`;

exports[`useStyles attaches object style to the head 1`] = `
<head>
  <style
    data-trousers=".css__23049546790"
    type="text/css"
  >
    
    .css__23049546790{background-color:blue;}

  </style>
</head>
`;

exports[`useStyles attaches object style with keyframe animations to the head 1`] = `
<head>
  <style
    data-trousers=".css__40709256660"
    type="text/css"
  >
    
    .css__40709256660{background-color:blue;}@-webkit-keyframes rotating-css__40709256660{from{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}@keyframes rotating-css__40709256660{from{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}

  </style>
</head>
`;

exports[`useStyles attaches object style with media queries to the head 1`] = `
<head>
  <style
    data-trousers=".css__2788979630"
    type="text/css"
  >
    
    .css__2788979630{background-color:blue;}@media (min-width:768px){.css__2788979630{background-color:#deecff;}}

  </style>
</head>
`;

exports[`useStyles attaches object style with pseudo states to the head 1`] = `
<head>
  <style
    data-trousers=".css__37481221400"
    type="text/css"
  >
    
    .css__37481221400{background-color:blue;}.css__37481221400:hover{background-color:brown;}

  </style>
</head>
`;

exports[`useStyles attaches single style to the head 1`] = `
<head>
  <style
    data-trousers=".css__2934395490"
    type="text/css"
  >
    
    .css__2934395490{background-color:blue;}

  </style>
</head>
`;

exports[`useStyles attaches styles to the head 1`] = `
<head>
  <style
    data-trousers=".foo__38890833250"
    type="text/css"
  >
    
    .foo__38890833250{background-color:blue;}

  </style>
</head>
`;

exports[`useStyles attaches styles with modifiers to the head 1`] = `
<head>
  <style
    data-trousers=".foo__38890833250"
    type="text/css"
  >
    
    .foo__38890833250{background-color:blue;}

  </style>
</head>
`;

exports[`useStyles attaches styles with modifiers to the head 2`] = `
<head>
  <style
    data-trousers=".foo__38890833250 .foo--4911895800"
    type="text/css"
  >
    
    .foo__38890833250{background-color:blue;}

    .foo--4911895800{background-color:red;}

  </style>
</head>
`;

exports[`useStyles attaches styles with multiple named modifiers to the head 1`] = `
<head>
  <style
    data-trousers=".foo__38890833250"
    type="text/css"
  >
    
    .foo__38890833250{background-color:blue;}

  </style>
</head>
`;

exports[`useStyles attaches styles with multiple named modifiers to the head 2`] = `
<head>
  <style
    data-trousers=".foo__38890833250 .foo--primary4911895800"
    type="text/css"
  >
    
    .foo__38890833250{background-color:blue;}

    .foo--primary4911895800{background-color:red;}

  </style>
</head>
`;

exports[`useStyles attaches styles with multiple named modifiers to the head 3`] = `
<head>
  <style
    data-trousers=".foo__38890833250 .foo--primary4911895800 .foo--secondary1129918790"
    type="text/css"
  >
    
    .foo__38890833250{background-color:blue;}

    .foo--primary4911895800{background-color:red;}

    .foo--secondary1129918790{background-color:isBlue;}

  </style>
</head>
`;

exports[`useStyles attaches styles with multiple named modifiers to the head 4`] = `
<head>
  <style
    data-trousers=".foo__38890833250 .foo--primary4911895800 .foo--secondary1129918790"
    type="text/css"
  >
    
    .foo__38890833250{background-color:blue;}

    .foo--primary4911895800{background-color:red;}

    .foo--secondary1129918790{background-color:isBlue;}

  </style>
</head>
`;

exports[`useStyles attaches styles with named modifiers to the head 1`] = `
<head>
  <style
    data-trousers=".foo__38890833250"
    type="text/css"
  >
    
    .foo__38890833250{background-color:blue;}

  </style>
</head>
`;

exports[`useStyles attaches styles with named modifiers to the head 2`] = `
<head>
  <style
    data-trousers=".foo__38890833250 .foo--primary4911895800"
    type="text/css"
  >
    
    .foo__38890833250{background-color:blue;}

    .foo--primary4911895800{background-color:red;}

  </style>
</head>
`;

exports[`useStyles attaches themed single style to the head 1`] = `
<head>
  <style
    data-trousers=".css__40281543953516409327"
    type="text/css"
  >
    
    .css__40281543953516409327{background-color:Atomic Tangerine;}

  </style>
</head>
`;

exports[`useStyles attaches themed styles to the head 1`] = `
<head>
  <style
    data-trousers=".foo__30169568313106931827"
    type="text/css"
  >
    
    .foo__30169568313106931827{background-color:purple;}

  </style>
</head>
`;

exports[`useStyles attaches themed styles to the head 2`] = `
<head>
  <style
    data-trousers=".foo__30169568313106931827 .foo--30169568313106931827"
    type="text/css"
  >
    
    .foo__30169568313106931827{background-color:purple;}

    .foo--30169568313106931827{background-color:purple;}

  </style>
</head>
`;
